@@ -1,3 +1,8 @@
+2005-11-25  Michael Snyder  <msnyder@redhat.com>
+
+	* linux-nat.c (child_follow_fork): Add verbose messages when
+	detaching from parent or child (to match HPUX tests in testsuite).
+
 2005-11-23  Michael Snyder  <msnyder@redhat.com>
 
 	* linux-nat.c: Adapt fork list to work with follow_fork.
